--- a/labs/appd-apm-java-101/1.md
+++ b/labs/appd-apm-java-101/1.md
@@ -2,16 +2,41 @@
 
 ## Objectives
 
-In this Lab you learn how to use AppDynamics to monitor the health of your Java application services. In this example, you learn how to install and configure the Java Application Performance Monitoring (APM) module to monitor your application's health, and how to generate alerts in AppDynamic's monitoring service based off of data captured by APM.
+In this Lab you learn how to use AppDynamics to monitor the health of your application services. In this Lab, you learn how to install and configure the Java Application Performance Monitoring (APM) agent to monitor your application's health, how to troubleshoot application performance issues to find root cause, and how to generate alerts in AppDynamic's monitoring service based off of data captured by AppDynamics.
 
 ## Prerequisites
 
-Prerequisite placeholder.
+You should already have VPN access to your Sandbox environment for the lab.  If you have not requested a Sandbox environment for the lab, follow the instructions [here](../appd-sandbox-setup-101/1.md).  You should have basic experience with Java and Linux.
 
-This lab covers X main areas:
+## Lab Contents
+This lab covers seven main areas:
 
-1. placeholder.
-2. placeholder.
-3. placeholder.
+1. Download the AppDynamics Java APM Agent.
+2. Install the AppDynamics Java APM Agent.
+3. Initialize the sample application with load.
+4. Configure detection settings in the Controller.
+5. Monitor the the application in the Controller.
+6. Troubleshoot application issues and find root cause.
+7. Configure health rules and alerts.
+
+## Sandbox Virtual Machines
+
+The sandbox environment for the labs has two virtual machines.  The first virtual machine hosts the AppDynamics Controller and will be referred to from this point on as the "Controller VM".  
+
+The second virtual machine hosts the Supercar Trader application used in the labs.  It will be the host where you will install the AppDynamics agents and will be referred to from this point on as the "Application VM".
+ 
+<br>
+
+### Controller VM Screenshot:
+![Controller VM Screenshot](./assets/images/01-controller-vm.png)
+
+<br>
+
+### Application VM Screenshot:
+![Application VM Screenshot](./assets/images/01-application-vm.png)
+<br>
 
 If you are ready to learn how AppDynamics can help you monitor your application's health, let's get started!
+<br>
+
+[Sandbox setup](../appd-sandbox-setup-101/1.md) | 1, [2](2.md), [3](3.md), [4](4.md), [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](../appd-sandbox-setup-101/1.md) | [Next](2.md)    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: red;">TODO:</span><span style="color: blue;">&nbsp;&nbsp;Remove menu before moving to staging</span>
