--- a/labs/appd-apm-java-101/2.md
+++ b/labs/appd-apm-java-101/2.md
@@ -20,9 +20,8 @@ You should see the login page of the Controller like the image below.
 
 Use the case sensative credentials below to login:
 
-Username = admin 
-<br>
-Password = welcome1
+- Username = admin 
+- Password = welcome1
 
 <br>
 
