--- a/labs/appd-apm-java-101/3.md
+++ b/labs/appd-apm-java-101/3.md
@@ -216,7 +216,7 @@ sudo systemctl stop apache-tomcat-7.service
 Find the "catalina.sh" startup file for Apache Tomcat.  The file is located in the directory seen below.
 
 ```
-cd /usr/local/apache/apache-tomcat-7.0.103/bin
+cd /usr/local/apache/apache-tomcat-7/bin
 ```
 Update the "catalina.sh" file and add the export command seen below right after line 111 in the file. 
 If you are using WinSCP to update the file, ensure that the "Transfer Settings" are set to "Text".
