--- a/labs/appd-apm-java-101/4.md
+++ b/labs/appd-apm-java-101/4.md
@@ -57,6 +57,8 @@ file://home/centos/DevNet-Labs/applications/Supercar-Trader/Supercar-Trader.war
 ```
 3. Click on the "Deploy" button
 
+
+<span style="color: red;">TODO:</span> <span style="color: blue;">Change the path to the WAR file above before moving to staging.</span>
 <br>
 
 ![Initialize App 3](./assets/images/04-initialize-app-03.png)
@@ -85,8 +87,32 @@ You should see the home page like the image below.
 
 ### **3.** Start the load generation for the sample application
 
+Initiate the transaction load for the application using the commands below.
+
+```
+sudo chmod 754 /home/centos/DevNet-Labs/applications/Load-Generator/phantomjs/*.sh
+
+cd /home/centos/DevNet-Labs/applications/Load-Generator/phantomjs
+
+./start_load.sh
+```
+
+```diff
+-TODO:  
+Change the path to the load script directory above before moving to staging.
+```
+
+
+You should see output from the commands as seen below.
+
+![Initialize App 6](./assets/images/04-initialize-app-06.png)
 
 
 <br>
 
-[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), 4, [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](3.md) | [Next](5.md)    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: red;">TODO:</span><span style="color: blue;">&nbsp;&nbsp;Remove menu before moving to staging</span>
+[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), 4, [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](3.md) | [Next](5.md)    
+
+```diff
+-TODO:  
+Remove menu before moving to staging.
+```
