--- a/labs/appd-apm-java-101/1.md
+++ b/labs/appd-apm-java-101/1.md
@@ -27,13 +27,14 @@ The second virtual machine hosts the Supercar Trader application used in the lab
  
 <br>
 
-### Controller VM Screenshot:
+### Controller VM:
 ![Controller VM Screenshot](./assets/images/01-controller-vm.png)
 
 <br>
 
-### Application VM Screenshot:
+### Application VM:
 ![Application VM Screenshot](./assets/images/01-application-vm.png)
+
 <br>
 
 If you are ready to learn how AppDynamics can help you monitor your application's health, let's get started!
