--- a/labs/appd-apm-java-101/1.md
+++ b/labs/appd-apm-java-101/1.md
@@ -38,6 +38,12 @@ The second virtual machine hosts the Supercar Trader application used in the lab
 <br>
 
 If you are ready to learn how AppDynamics can help you monitor your application's health, let's get started!
+
 <br>
 
-[Sandbox setup](../appd-sandbox-setup-101/1.md) | 1, [2](2.md), [3](3.md), [4](4.md), [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](../appd-sandbox-setup-101/1.md) | [Next](2.md)    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: red;">TODO:</span><span style="color: blue;">&nbsp;&nbsp;Remove menu before moving to staging</span>
+[Sandbox setup](../appd-sandbox-setup-101/1.md) | 1, [2](2.md), [3](3.md), [4](4.md), [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](../appd-sandbox-setup-101/1.md) | [Next](2.md)
+
+```diff
+-TODO:  
+Remove menu before moving to staging.
+```
