--- a/labs/appd-apm-java-101/2.md
+++ b/labs/appd-apm-java-101/2.md
@@ -2,7 +2,10 @@
 
 In this exercise you will access your AppDynamics Controller from your web browser and download the Java APM agent from there.  
 
-<span style="color: red;">TODO:</span> <span style="color: blue;">Add reference to VPN connection requirement [here](../appd-sandbox-setup-101/1.md)</span>
+```diff
+-TODO:  
+Add reference to VPN connection requirement.
+```
 
 
 In the example URL below, substitute the IP Address or fully qualified domain name of your Controller VM which you received in an email after reserving your sandbox environment for the labs. 
@@ -66,6 +69,12 @@ Your browser should bring up a prompt for you to save the agent file to your loc
 <br>
 
 ![Download Wizard 4](./assets/images/02-download-wizard-04.png)
+
 <br>
 
-[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), 2, [3](3.md), [4](4.md), [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](1.md) | [Next](3.md)    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: red;">TODO:</span><span style="color: blue;">&nbsp;&nbsp;Remove menu before moving to staging</span>
+[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), 2, [3](3.md), [4](4.md), [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](1.md) | [Next](3.md)
+
+```diff
+-TODO:  
+Remove menu before moving to staging.
+```
