--- a/labs/appd-apm-java-101/3.md
+++ b/labs/appd-apm-java-101/3.md
@@ -6,8 +6,10 @@ In this exercise you will need to do the following:
 - Update the Java agents XML configuration file
 - Modify the Apache Tomcat startup script to add the Java agent
 
-<span style="color: red;">TODO:</span> <span style="color: blue;">Add reference to VPN connection requirement [here](../appd-sandbox-setup-101/1.md)</span>
-
+```diff
+-TODO:  
+Add reference to VPN connection requirement.
+```
 
 You will need the following connection details for the "Application VM" during this exercise.
 
@@ -34,7 +36,10 @@ Run the command below from a new terminal window to upload the Java agent zip fi
 scp /tmp/AppServerAgent-20.3.0.29587.zip centos@application.vm.ip.address:/tmp/
 ```
 
-<span style="color: red;">TODO:</span> <span style="color: blue;">Add screenshot of upload here.</span>
+```diff
+-TODO:  
+Add screenshot of upload here.
+```
 
 Executing the command will prompt you for the password for the "Application VM".  Enter the password to complete the command.
 
@@ -49,7 +54,10 @@ Open a new terminal window and use the command below to SSH into your "Applicati
 ssh centos@application.vm.ip.address
 ```
 
-<span style="color: red;">TODO:</span> <span style="color: blue;">Add screenshot of SSH window here.</span>
+```diff
+-TODO:  
+Add screenshot of SSH window here.
+```
 
 Executing the command will prompt you for the password for the "Application VM".  Enter the password to complete the command.
 
@@ -247,4 +255,9 @@ You should see output like the image below showing that port 8080 is in use by A
 
 <br>
 
-[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), 3, [4](4.md), [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](2.md) | [Next](4.md)    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: red;">TODO:</span><span style="color: blue;">&nbsp;&nbsp;Remove menu before moving to staging</span>
+[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), 3, [4](4.md), [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](2.md) | [Next](4.md)
+
+```diff
+-TODO:  
+Remove menu before moving to staging.
+```
