--- a/labs/appd-apm-java-101/4.md
+++ b/labs/appd-apm-java-101/4.md
@@ -1,14 +1,15 @@
 # Initialize the sample application with load
 
 In this exercise you will need to do the following:
-- Clone the Github lab repository on your "Application VM"
+- Clone the GitHub lab repository on your "Application VM"
 - Install the sample application on Apache Tomcat
 - Start the load generation for the sample application
+- Confirm the transaction load in the Controller
 
 
-### **1.** Clone the Github lab repository on your "Application VM"
+### **1.** Clone the GitHub lab repository on your "Application VM"
 
-Use the commands below to clone the Github lab repository.
+Use the commands below to clone the GitHub lab repository.
 
 ```
 cd /home/centos
@@ -16,7 +17,10 @@ cd /home/centos
 git clone https://github.com/Appdynamics/DevNet-Labs.git
 ```
 
-<span style="color: red;">TODO:</span> <span style="color: blue;">Change the Github URL above and the image below before moving to staging.</span>
+```diff
+-TODO:  
+Change the GitHub URL above and the image below before moving to staging.
+```
 
 You should see output from the commands as seen below.
 
@@ -34,7 +38,11 @@ Example Tomcat URL for browser:
 http://IP_OF_APPLICATION_VM:8080
 ```
 
-You should see the Tomcat landing page as seen below.  Click on the "Manager App" button.  You will be prompted to enter a username and password.  Use the case sensative credentials below to login to the Tomcat Manager App.
+You should see the Tomcat landing page as seen below.  
+
+1. Click on the "Manager App" button.  
+
+You will be prompted to enter a username and password.  Use the case sensative credentials below to login to the Tomcat Manager App.
 
 <br>
 
@@ -57,8 +65,10 @@ file://home/centos/DevNet-Labs/applications/Supercar-Trader/Supercar-Trader.war
 ```
 3. Click on the "Deploy" button
 
-
-<span style="color: red;">TODO:</span> <span style="color: blue;">Change the path to the WAR file above before moving to staging.</span>
+```diff
+-TODO:  
+Change the path to the WAR file above before moving to staging.
+```
 <br>
 
 ![Initialize App 3](./assets/images/04-initialize-app-03.png)
@@ -106,6 +116,11 @@ Change the path to the load script directory above before moving to staging.
 You should see output from the commands as seen below.
 
 ![Initialize App 6](./assets/images/04-initialize-app-06.png)
+
+<br>
+
+### **4.** Confirm the transaction load in the Controller
+
 
 
 <br>
