--- a/labs/appd-apm-java-101/4.md
+++ b/labs/appd-apm-java-101/4.md
@@ -44,12 +44,12 @@ You should see the Tomcat landing page as seen below.
 
 You will be prompted to enter a username and password.  Use the case sensative credentials below to login to the Tomcat Manager App.
 
+- Username = admin 
+- Password = welcome1
+
 <br>
 
 ![Initialize App 2](./assets/images/04-initialize-app-02.png)
-
-- Username = admin 
-- Password = welcome1
 
 <br>
 
@@ -67,7 +67,7 @@ file://home/centos/DevNet-Labs/applications/Supercar-Trader/Supercar-Trader.war
 
 ```diff
 -TODO:  
-Change the path to the WAR file above before moving to staging.
+Change the path to the WAR file above and the screenshot with the path shown below before moving to staging.
 ```
 <br>
 
