--- a/labs/appd-apm-java-101/4.md
+++ b/labs/appd-apm-java-101/4.md
@@ -121,9 +121,64 @@ You should see output from the commands as seen below.
 
 ### **4.** Confirm the transaction load in the Controller
 
+Use your web browser to access the AppDynamics Controller.
 
+Login to the Controller and you should see the "Supercar-Trader" application like the image below.
+
+1. Double click on the "Supercar-Trader" application to open the application flow map.
+
+![Initialize App 7](./assets/images/04-initialize-app-07.png)
 
 <br>
+
+When you open the flow map for the application, you should see all the application components appear after ten minutes like you see in the image below.  
+
+If you don't see all the application components after ten minutes, try refreshing your browser tab.
+
+![Initialize App 8](./assets/images/04-initialize-app-08.png)
+
+<br>
+Once all of the components appear on the flow map, you should see an "HTTP" cloud icon that represents the three HTTP backends called by the "Insurance-Services" Tier.  
+
+Ungroup the the three HTTP backends by following the steps below.
+
+1. Right click on the HTTP cloud icon labeled "3 HTTP backends"
+2. From the drop down menu, select "Ungroup Backends"
+
+![Initialize App 9](./assets/images/04-initialize-app-09.png)
+
+<br>
+
+Once the HTTP backends have been ungrouped, you should see all three HTTP backends as seen in the image below.
+
+![Initialize App 10](./assets/images/04-initialize-app-10.png)
+
+<br>
+
+Familiarize yourself with the some of the different features of the Flow Map.
+
+1. Try using the different layout options
+2. Try using the slider to adjust the zoom level
+3. Look at the Transaction Scorecard 
+
+You can read more about Flow Maps [here](https://docs.appdynamics.com/display/latest/Flow+Maps)
+
+![Initialize App 11](./assets/images/04-initialize-app-11.png)
+
+<br>
+
+Verify that business transactions are being automatically detected by following the steps below.
+
+1. Click on the "Business Transactions" option on the left menu
+2. Look at the list of Business Transactions and their performance
+
+You can read more about Business Transactions [here](https://docs.appdynamics.com/display/latest/Business+Transactions) and [here](https://docs.appdynamics.com/display/latest/Organize+Business+Transactions)
+
+![Initialize App 12](./assets/images/04-initialize-app-12.png)
+
+<br>
+
+
 
 [Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), 4, [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](3.md) | [Next](5.md)    
 
