--- a/labs/appd-apm-java-101/1.md
+++ b/labs/appd-apm-java-101/1.md
@@ -14,7 +14,7 @@ This lab covers seven main areas:
 1. Download the AppDynamics Java APM Agent.
 2. Install the AppDynamics Java APM Agent.
 3. Initialize the sample application with load.
-4. Configure detection settings in the Controller.
+4. Configure collection settings in the Controller.
 5. Monitor the the application in the Controller.
 6. Troubleshoot application issues and find root cause.
 7. Configure health rules and alerts.
