--- a/labs/appd-apm-java-101/5.md
+++ b/labs/appd-apm-java-101/5.md
@@ -1,13 +1,14 @@
-# Configure detection settings in the Controller
+# Configure collection settings in the Controller
 
 In this exercise you will need to do the following:
-- Placeholder
-- Placeholder
-- Placeholder
-- Placeholder
+- Adjust Business Transaction auto-detection settings
+- Adjust Slow Transaction Threshold settings
+- Adjust Call Graph settings
+- Confirm the results of your adjustments
 
 
-### **1.** Placeholder
+### **1.** Adjust Business Transaction auto-detection settings
+
 
 
 <br>
