--- a/labs/appd-apm-java-101/4.md
+++ b/labs/appd-apm-java-101/4.md
@@ -131,9 +131,9 @@ Login to the Controller and you should see the "Supercar-Trader" application lik
 
 <br>
 
-When you open the flow map for the application, you should see all the application components appear after ten minutes like you see in the image below.  
+When you open the flow map for the application, you should see all the application components appear after twelve minutes like you see in the image below.  
 
-If you don't see all the application components after ten minutes, try refreshing your browser tab.
+If you don't see all the application components after twelve minutes, try refreshing your browser tab.
 
 ![Initialize App 8](./assets/images/04-initialize-app-08.png)
 
