--- a/labs/appd-apm-java-101/5.md
+++ b/labs/appd-apm-java-101/5.md
@@ -9,7 +9,30 @@ In this exercise you will need to do the following:
 
 ### **1.** Adjust Business Transaction auto-detection settings
 
+In the last exercise, you validated that the Business Transactions were being auto-detected.  There are times when you want to adjust the Business Transaction auto-detection rules to get them to an optimal state.  This is the case with our sample application which is built on an older Apache Struts framework.
 
+Anytime you see the time frame selector visible in the AppDynamics UI, the view you see will represent the context of the time frame selected.  You can choose one of the pre-defined time frames or create your own custom time frame with the specific date and time range you want to view.
+
+1. Select the "last 1 hour" time frame
+2. Use your mouse to hover over the blue icons to see the "Entry Point Type" of the transaction
+
+The business transactions highlighted in the image below show that each pair has a "Struts Action" type and a "Servlet" type.  Notice that each pair has the same number of calls per minute.  
+
+![Config Settings 1](./assets/images/05-collection-conf-01.png)
+
+<br>
+
+Optimize the transaction detection by following the steps below.
+
+1. Click on the Configuration" option toward the bottom left menu
+2. Click on the "Instrumentation" link
+
+![Config Settings 2](./assets/images/05-collection-conf-02.png)
+
+<br>
+
+
+<br>
 
 <br>
 
