--- a/labs/appd-apm-java-101/4.md
+++ b/labs/appd-apm-java-101/4.md
@@ -133,12 +133,29 @@ Login to the Controller and you should see the "Supercar-Trader" application lik
 
 When you open the flow map for the application, you should see all the application components appear after twelve minutes like you see in the image below.  
 
-If you don't see all the application components after twelve minutes, try refreshing your browser tab.
+If you don't see all the application components after twelve minutes, try waiting a few more minutes and refresh your browser tab.
+
+In the last exercise, you updated the "controller-info.xml" file to assign a Tier name and Node name to the Tomcat JVM.
+
+```
+<tier-name>Web-Portal</tier-name>
+<node-name>Web-Portal_Node-01</node-name>
+```
+
+You might be wondering how the other four services had their Tier and Node name assigned.  The sample application dynamically creates the additional four JVM's from the initial Tomcat JVM and assigns the Tier and Node names by passing those properties into the JVM startup command as "-D properties" for each of the four services.  Any "-D properties" included on the JVM startup command line will superceed the properties defined in the Java agents "controller-info.xml" file.
+
+Issue the following command in your terminal window of your "Application VM" to see the JVM startup parameters used for each of the four services that were dynamically started.
+
+```
+ps -ef | grep appdynamics.agent.tierName
+```
 
 ![Initialize App 8](./assets/images/04-initialize-app-08.png)
 
 <br>
 Once all of the components appear on the flow map, you should see an "HTTP" cloud icon that represents the three HTTP backends called by the "Insurance-Services" Tier.  
+
+<br>
 
 Ungroup the the three HTTP backends by following the steps below.
 
@@ -157,9 +174,12 @@ Once the HTTP backends have been ungrouped, you should see all three HTTP backen
 
 Familiarize yourself with the some of the different features of the Flow Map.
 
-1. Try using the different layout options
+1. Try using the different layout options (you can also click and drag each icon on the flow map to position it)
 2. Try using the slider to adjust the zoom level
-3. Look at the Transaction Scorecard 
+3. Look at the Transaction Scorecard
+4. Explore the options for editing the flow map
+
+AppDynamics automatically captures and scores every transaction. Flow maps present a dynamic visual representation of the components and activities of your monitored application environment in direct context of the time frame you have selected.
 
 You can read more about Flow Maps [here](https://docs.appdynamics.com/display/latest/Flow+Maps)
 
