--- a/labs/appd-apm-java-101/1.md
+++ b/labs/appd-apm-java-101/1.md
@@ -9,15 +9,14 @@ In this Lab you learn how to use AppDynamics to monitor the health of your appli
 You should already have VPN access to your Sandbox environment for the lab.  If you have not requested a Sandbox environment for the lab, follow the instructions [here](../appd-sandbox-setup-101/1.md).  You should have basic experience with Java and Linux.
 
 ## Lab Contents
-This lab covers seven main areas:
+This lab covers six main areas:
 
-1. Download the AppDynamics Java APM Agent.
-2. Install the AppDynamics Java APM Agent.
-3. Initialize the sample application with load.
-4. Configure collection settings in the Controller.
-5. Monitor the the application in the Controller.
-6. Troubleshoot application issues and find root cause.
-7. Configure health rules and alerts.
+1. Download the AppDynamics Java APM Agent
+2. Install the AppDynamics Java APM Agent
+3. Initialize the sample application with load
+4. Configure collection settings in the Controller
+5. Monitor and troubleshoot application issues
+6. Configure health rules and alerts
 
 ## Sandbox Virtual Machines
 
@@ -41,7 +40,7 @@ If you are ready to learn how AppDynamics can help you monitor your application'
 
 <br>
 
-[Sandbox setup](../appd-sandbox-setup-101/1.md) | 1, [2](2.md), [3](3.md), [4](4.md), [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](../appd-sandbox-setup-101/1.md) | [Next](2.md)
+[Sandbox setup](../appd-sandbox-setup-101/1.md) | 1, [2](2.md), [3](3.md), [4](4.md), [5](5.md), [6](6.md), [7](7.md) | [Back](../appd-sandbox-setup-101/1.md) | [Next](2.md)
 
 ```diff
 -TODO:  
