--- a/labs/appd-apm-java-101/4.md
+++ b/labs/appd-apm-java-101/4.md
@@ -125,7 +125,7 @@ Use your web browser to access the AppDynamics Controller.
 
 Login to the Controller and you should see the "Supercar-Trader" application like the image below.
 
-1. Double click on the "Supercar-Trader" application to open the application flow map.
+1. Double-click on the "Supercar-Trader" application to open the application flow map.
 
 ![Initialize App 7](./assets/images/04-initialize-app-07.png)
 
@@ -172,6 +172,10 @@ Once the HTTP backends have been ungrouped, you should see all three HTTP backen
 
 <br>
 
+AppDynamics app agents automatically discover the most common application frameworks and services. Using built-in application detection and configuration settings, agents collect application data and metrics to build flow maps.
+
+AppDynamics automatically captures and scores every transaction. Flow maps present a dynamic visual representation of the components and activities of your monitored application environment in direct context of the time frame you have selected.
+
 Familiarize yourself with the some of the different features of the Flow Map.
 
 1. Try using the different layout options (you can also click and drag each icon on the flow map to position it)
@@ -179,13 +183,19 @@ Familiarize yourself with the some of the different features of the Flow Map.
 3. Look at the Transaction Scorecard
 4. Explore the options for editing the flow map
 
-AppDynamics automatically captures and scores every transaction. Flow maps present a dynamic visual representation of the components and activities of your monitored application environment in direct context of the time frame you have selected.
-
 You can read more about Flow Maps [here](https://docs.appdynamics.com/display/latest/Flow+Maps)
 
 ![Initialize App 11](./assets/images/04-initialize-app-11.png)
 
 <br>
+
+In the AppDynamics model, a business transaction represents the data processing flow for a request, most often a user request. In real-world terms, many different components in your application may interact to provide services to fulfill the following types of requests:
+
+- In an e-commerce application, a user logging in, searching for items or adding items to the cart
+- In a content portal, a user requests content such as sports, business or entertainment news
+- In a stock trading application, operations such as receiving a stock quote, buying or selling stocks
+
+Because AppDynamics orients performance monitoring around business transactions, you can focus on the performance of your application components from the user perspective. You can quickly identify whether a component is readily available or if it is having performance issues. For instance, you can check whether users able to log in, check out or view their data. You can see response times for users, and the causes of problems when they occur.
 
 Verify that business transactions are being automatically detected by following the steps below.
 
@@ -198,9 +208,54 @@ You can read more about Business Transactions [here](https://docs.appdynamics.co
 
 <br>
 
+AppDynamics monitors every execution of a business transaction in the instrumented environment, and the metrics reflect all such executions. However, for troubleshooting purposes, AppDynamics takes snapshots of specific instances of a transaction. 
+
+Verify that transaction snapshots are being automatically collected by following the steps below.
+
+1. Click on the "Application Dashboard" option on the left menu
+2. Click on the "Transaction Snapshots" tab
+3. Click on the "Exe Time (ms)" column to sort the snapshots with the greatest execution time
+4. Double-click a business transaction snapshot to display the snapshot viewer
+
+![Initialize App 13](./assets/images/04-initialize-app-13.png)
+
+<br>
+
+A transaction snapshot gives you a cross-tier view of the processing flow for a single invocation of a transaction.
+
+The Potential Issues panel highlights slow methods and slow remote service help you investigate the root causes for performance issues. 
+
+Call drill downs, where available, detail key information including slowest methods, errors, and remote service calls for the transaction execution on a tier. A drill down may include a partial or complete call graph. Call graphs reflect the code-level view of the processing of the business transaction on a particular tier.
+
+In the flow map for a business transaction snapshot, a tier with a Drill Down link indicates AppDynamics has taken a call graph for that tier.
+
+Drill down into a call graph of the transaction snapshot by following the steps below.
+
+1. Click on a slow call in the "Potential Issues" list on the left
+2. Click on the "Drill Down into Call Graph" button
+   
+![Initialize App 14](./assets/images/04-initialize-app-14.png)
+
+<br>
+
+The call graph view shows you the following details.
 
 
-[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), 4, [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](3.md) | [Next](5.md)    
+1. The method execution sequence shows the names of the classes and methods that participated in processing the business transaction on this node, in the order in which the flow of control proceeded
+2. For each method, you can see the time and percentage spent processing and the line number in the source code, enabling you to pinpoint the location in code that could be affecting the performance of the transaction
+3. The call graph displays exit call links for methods that make calls to outside applications and services such as database queries and web service calls
+
+
+You can read more about Transaction Snapshots [here](https://docs.appdynamics.com/display/latest/Transaction+Snapshots)
+
+You can read more about Call Graphs [here](https://docs.appdynamics.com/display/latest/Call+Graphs)
+
+![Initialize App 15](./assets/images/04-initialize-app-15.png)
+
+
+<br>
+
+[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), 4, [5](5.md), [6](6.md), [7](7.md) | [Back](3.md) | [Next](5.md)    
 
 ```diff
 -TODO:  
