--- a/labs/appd-apm-java-101/3.md
+++ b/labs/appd-apm-java-101/3.md
@@ -257,7 +257,7 @@ You should see output like the image below showing that port 8080 is in use by A
 
 <br>
 
-[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), 3, [4](4.md), [5](5.md), [6](6.md), [7](7.md), [8](8.md) | [Back](2.md) | [Next](4.md)
+[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), 3, [4](4.md), [5](5.md), [6](6.md), [7](7.md) | [Back](2.md) | [Next](4.md)
 
 ```diff
 -TODO:  
