--- a/labs/appd-apm-java-101/7.md
+++ b/labs/appd-apm-java-101/7.md
@@ -1,4 +1,4 @@
-# Troubleshoot application issues and find root cause
+# Configure health rules and alerts
 
 In this exercise you will need to do the following:
 - Placeholder
@@ -12,7 +12,7 @@ In this exercise you will need to do the following:
 
 <br>
 
-[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), [4](4.md), [5](5.md), [6](6.md), 7, [8](8.md) | [Back](6.md) | [Next](8.md)    
+[Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), [4](4.md), [5](5.md), [6](6.md), 7 | [Back](6.md) | Next    
 
 ```diff
 -TODO:  
