--- a/labs/appd-apm-java-101/6.md
+++ b/labs/appd-apm-java-101/6.md
@@ -66,18 +66,79 @@ You should see the list of very slow transaction snapshots as seen in the image 
 
 <br>
 
-Once you've opend the transaction snapshot, click on the "Drill Down" button on the Web-Portal Tier.
+When the transaction snapshot viewer opens, you will see the flow map view of all the components that were part of this specific transaction.  This snapshot shows the transaction traversed through the components below in order.
+
+- The Web-Portal Tier
+- The Api-Services Tier
+- The Enquiry-Services Tier
+- The MySQL Database
+
+The Potential Issues panel on the left highlights slow methods and slow remote services. While you can use the Potential Issues panel to drill straight into the call graph, we will use the Flow Map within the snapshot to follow the complete transaction in this example.
+
+1. Click on the "Drill Down" button on the Web-Portal Tier shown on the FLow Map of the snapshot
 
 ![Monitor 7](./assets/images/06-monitor-troubleshoot-07.png)
 
 <br>
 
-Continue here ....................
+The tab that opens shows the call graph of the Web-Portal Tier.  You can see that over 97% of the time spent was on an outbound HTTP call.
+
+2. Click on the "HTTP" link to open the detail panel for the downstream call
 
 ![Monitor 8](./assets/images/06-monitor-troubleshoot-08.png)
 
 <br>
 
+The detail panel for the downstream call shows that the Web-Portal Tier made an outbound HTTP call to the Api-Services Tier.  Follow the HTTP call into the Api-Services Tier.
+
+3. Click on the "Drill Down into Downstream Call" button
+
+
+![Monitor 9](./assets/images/06-monitor-troubleshoot-09.png)
+
+<br>
+
+The next tab that opens shows the call graph of the Api-Services Tier.  You can see that 100% of the time spent was on an outbound HTTP call.
+
+4. Click on the "HTTP" link to open the detail panel for the downstream call
+   
+![Monitor 10](./assets/images/06-monitor-troubleshoot-10.png)
+
+<br>
+
+The detail panel for the downstream call shows that the Api-Services Tier made an outbound HTTP call to the Enquiry-Services Tier.  Follow the HTTP call into the Enquiry-Services Tier.
+
+5. Click on the "Drill Down into Downstream Call" button
+
+![Monitor 11](./assets/images/06-monitor-troubleshoot-11.png)
+
+<br>
+
+The next tab that opens shows the call graph of the Enquiry-Services Tier.  You can see that there were JDBC calls to the database that caused issues with the transaction.
+
+6. Click on the "JDBC" link with the largest time to open the detail panel for the JDBC calls
+   
+![Monitor 12](./assets/images/06-monitor-troubleshoot-12.png)
+
+<br>
+
+The detail panel for the JDBC exit calls show the specific query that took most of the time.  You can see the full SQL statement along with the SQL parameter values.
+
+![Monitor 13](./assets/images/06-monitor-troubleshoot-13.png)
+
+<br>
+
+### **3.** Find specific errors in the application
+
+
+
+<br>
+
+### **4.** Troubleshoot node issues
+
+
+
+<br>
 
 
 [Sandbox setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), [4](4.md), [5](5.md), 6, [7](7.md) | [Back](5.md) | [Next](7.md)    
