--- a/labs/appd-apm-java-101/6.md
+++ b/labs/appd-apm-java-101/6.md
@@ -132,10 +132,12 @@ The detail panel for the JDBC exit calls show the specific query that took most 
 
 
 
+![Monitor 14](./assets/images/06-monitor-troubleshoot-14.png)
+
+
 <br>
 
 ### **4.** Troubleshoot node issues
-
 
 
 <br>
