--- a/labs/appd-apm-java-101/6.md
+++ b/labs/appd-apm-java-101/6.md
@@ -75,7 +75,7 @@ When the transaction snapshot viewer opens, you will see the flow map view of al
 
 The Potential Issues panel on the left highlights slow methods and slow remote services. While you can use the Potential Issues panel to drill straight into the call graph, we will use the Flow Map within the snapshot to follow the complete transaction in this example.
 
-1. Click on the "Drill Down" button on the Web-Portal Tier shown on the FLow Map of the snapshot
+1. Click on the "Drill Down" button on the Web-Portal Tier shown on the Flow Map of the snapshot
 
 ![Monitor 7](./assets/images/06-monitor-troubleshoot-07.png)
 
@@ -122,7 +122,7 @@ The next tab that opens shows the call graph of the Enquiry-Services Tier.  You 
 
 <br>
 
-The detail panel for the JDBC exit calls show the specific query that took most of the time.  You can see the full SQL statement along with the SQL parameter values.
+The detail panel for the JDBC exit calls shows the specific query that took most of the time.  You can see the full SQL statement along with the SQL parameter values.
 
 ![Monitor 13](./assets/images/06-monitor-troubleshoot-13.png)
 
