--- a/labs/appd-apm-java-101/1.md
+++ b/labs/appd-apm-java-101/1.md
@@ -15,8 +15,8 @@ This lab covers six main areas:
 2. Install the AppDynamics Java APM Agent
 3. Initialize the sample application with load
 4. Configure collection settings in the Controller
-5. Monitor and troubleshoot application issues
-6. Configure health rules and alerts
+5. Monitor and troubleshoot application issues : Part 1
+6. Monitor and troubleshoot application issues : Part 2
 
 ## Sandbox Virtual Machines
 
