--- a/labs/appd-apm-java-101/4.md
+++ b/labs/appd-apm-java-101/4.md
@@ -135,6 +135,8 @@ When you open the flow map for the application, you should see all the applicati
 
 If you don't see all the application components after twelve minutes, try waiting a few more minutes and refresh your browser tab.
 
+![Initialize App 8](./assets/images/04-initialize-app-08.png)
+
 In the last exercise, you updated the "controller-info.xml" file to assign a Tier name and Node name to the Tomcat JVM.
 
 ```
@@ -142,7 +144,7 @@ In the last exercise, you updated the "controller-info.xml" file to assign a Tie
 <node-name>Web-Portal_Node-01</node-name>
 ```
 
-You might be wondering how the other four services had their Tier and Node name assigned.  The sample application dynamically creates the additional four JVM's from the initial Tomcat JVM and assigns the Tier and Node names by passing those properties into the JVM startup command as "-D properties" for each of the four services.  Any "-D properties" included on the JVM startup command line will superceed the properties defined in the Java agents "controller-info.xml" file.
+You might be wondering how the other four services had their Tier and Node name assigned.  The sample application dynamically creates four additional JVM's from the initial Tomcat JVM and assigns the Tier and Node names by passing those properties into the JVM startup command as "-D properties" for each of the four services.  Any "-D properties" included on the JVM startup command line will superceed the properties defined in the Java agents "controller-info.xml" file.
 
 Issue the following command in your terminal window of your "Application VM" to see the JVM startup parameters used for each of the four services that were dynamically started.
 
@@ -150,12 +152,10 @@ Issue the following command in your terminal window of your "Application VM" to 
 ps -ef | grep appdynamics.agent.tierName
 ```
 
-![Initialize App 8](./assets/images/04-initialize-app-08.png)
-
 <br>
+
 Once all of the components appear on the flow map, you should see an "HTTP" cloud icon that represents the three HTTP backends called by the "Insurance-Services" Tier.  
 
-<br>
 
 Ungroup the the three HTTP backends by following the steps below.
 
